--- a/Strings/AppResources.fr.resx
+++ b/Strings/AppResources.fr.resx
@@ -3432,4 +3432,124 @@ Voulez-vous le supprimer ?</value>
     <value>DERNIER TAF</value>
     <comment>LATEST TAF</comment>
   </data>
+  <data name="AircraftFilterControl.Country" xml:space="preserve">
+    <value>PAYS</value>
+    <comment>COUNTRY</comment>
+  </data>
+  <data name="AircraftFilterControl.Manufacturer" xml:space="preserve">
+    <value>FABRICANT</value>
+    <comment>MANUFACTURER</comment>
+  </data>
+  <data name="AircraftFilterControl.Model" xml:space="preserve">
+    <value>MODÈLE</value>
+    <comment>MODEL</comment>
+  </data>
+  <data name="AircraftFilterControl.OnlyFreeRented" xml:space="preserve">
+    <value>Seulement gratuit/loué</value>
+    <comment>Only Free/Rented</comment>
+  </data>
+  <data name="AircraftFilterControl.ShowOlderAircraft" xml:space="preserve">
+    <value>Afficher les anciens avions</value>
+    <comment>Show older aircraft</comment>
+  </data>
+  <data name="AircraftFilterControl.SortBy" xml:space="preserve">
+    <value>Trier par</value>
+    <comment>Sort By</comment>
+  </data>
+  <data name="AircraftSelectionControl.AircraftCountPlural" xml:space="preserve">
+    <value>{0} avions</value>
+    <comment>{0} aircraft</comment>
+  </data>
+  <data name="AircraftSelectionControl.AircraftCountSingular" xml:space="preserve">
+    <value>{0} avion</value>
+    <comment>{0} aircraft</comment>
+  </data>
+  <data name="AircraftSelectionControl.LiveryCountPlural" xml:space="preserve">
+    <value>{0} livrées</value>
+    <comment>{0} liveries</comment>
+  </data>
+  <data name="AircraftSelectionControl.LiveryCountSingular" xml:space="preserve">
+    <value>{0} livrée</value>
+    <comment>{0} livery</comment>
+  </data>
+  <data name="AircraftSelectionControl.MiscShort" xml:space="preserve">
+    <value>Divers</value>
+    <comment>Misc.</comment>
+  </data>
+  <data name="AircraftSelectionFooterControl.Operators" xml:space="preserve">
+    <value>OPÉRATEURS</value>
+    <comment>OPERATORS</comment>
+  </data>
+  <data name="ProPlansControl.FailedToRetrieveSubs" xml:space="preserve">
+    <value>Échec de récupération des forfaits d’abonnement</value>
+    <comment>Failed to retrieve any subscription plans</comment>
+  </data>
+  <data name="ProPlansControl.MostPopular" xml:space="preserve">
+    <value>Plus Populaire</value>
+    <comment>Most Popular</comment>
+  </data>
+  <data name="ProPlansControl.UnauthorizedAccess" xml:space="preserve">
+    <value>Accès non autorisé aux forfaits d’abonnement</value>
+    <comment>Unauthorized access to subscription plans</comment>
+  </data>
+  <data name="RentSubControl.ActiveCommunity.Description" xml:space="preserve">
+    <value>ÉVÉNEMENTS QUOTIDIENS ET VOLS EN GROUPE</value>
+    <comment>DAILY EVENTS AND GROUP FLIGHTS</comment>
+  </data>
+  <data name="RentSubControl.ActiveCommunity.Title" xml:space="preserve">
+    <value>COMMUNAUTÉ ACTIVE</value>
+    <comment>ACTIVE COMMUNITY</comment>
+  </data>
+  <data name="RentSubControl.ExploreTheWorld.Description" xml:space="preserve">
+    <value>IMAGERIE SATELLITE MONDIALE HD 15M/PX DU TERRAIN</value>
+    <comment>WORLDWIDE HD 15M/PX SATELLITE TERRAIN IMAGERY</comment>
+  </data>
+  <data name="RentSubControl.ExploreTheWorld.Title" xml:space="preserve">
+    <value>EXPLORER LE MONDE</value>
+    <comment>EXPLORE THE WORLD</comment>
+  </data>
+  <data name="RentSubControl.Help" xml:space="preserve">
+    <value>Aide</value>
+    <comment>Help</comment>
+  </data>
+  <data name="RentSubControl.InstrumentProcedures.Description" xml:space="preserve">
+    <value>DONNÉES DE NAVIGATION MONDIALES RÉELLES</value>
+    <comment>REAL-WORLD GLOBAL NAVIGATION DATA</comment>
+  </data>
+  <data name="RentSubControl.InstrumentProcedures.Title" xml:space="preserve">
+    <value>PROCÉDURES AUX INSTRUMENTS</value>
+    <comment>INSTRUMENT PROCEDURES</comment>
+  </data>
+  <data name="RentSubControl.MessageAircraftLiverySub" xml:space="preserve">
+    <value>{0} ({1}) nécessite un abonnement pour voler</value>
+    <comment>{0} ({1}) requires a subscription to fly</comment>
+  </data>
+  <data name="RentSubControl.MessageAircraftLiverySubRent" xml:space="preserve">
+    <value>{0} ({1}) nécessite une location ou un abonnement pour voler</value>
+    <comment>{0} ({1}) requires a rental or a subscription to fly</comment>
+  </data>
+  <data name="RentSubControl.MessageGenericSub" xml:space="preserve">
+    <value>Infinite Flight Pro vous donne accès à tous les avions, à la scène mondiale et au multijoueur</value>
+    <comment>Infinite Flight Pro gives you access to all aircraft, global scenery and multiplayer</comment>
+  </data>
+  <data name="RentSubControl.MoreOptions" xml:space="preserve">
+    <value>Plus d’Options</value>
+    <comment>More Options</comment>
+  </data>
+  <data name="RentSubControl.MultiplayerWithAtc.Description" xml:space="preserve">
+    <value>VOLEZ AVEC DES MILLIERS D’AUTRES PILOTES &amp; ATC</value>
+    <comment>FLY WITH THOUSANDS OF OTHER PILOTS &amp; ATC</comment>
+  </data>
+  <data name="RentSubControl.MultiplayerWithAtc.Title" xml:space="preserve">
+    <value>MULTIJOUEUR AVEC ATC</value>
+    <comment>MULTIPLAYER WITH ATC</comment>
+  </data>
+  <data name="RentSubControl.RealisticAtmosphere.Description" xml:space="preserve">
+    <value>NUAGES, VENTS EN ALTITUDE, CYCLE JOUR/NUIT ET PLUS</value>
+    <comment>CLOUDS, WINDS ALOFT, DAY/NIGHT CYCLE, AND MORE</comment>
+  </data>
+  <data name="RentSubControl.RealisticAtmosphere.Title" xml:space="preserve">
+    <value>ATMOSPHÈRE RÉALISTE</value>
+    <comment>REALISTIC ATMOSPHERE</comment>
+  </data>
 </root>
