--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -4466,4 +4466,124 @@ Would you like to delete it?</comment>
   <data name="Replay.DeleteSelectedReplayAction" xml:space="preserve">
     <value>Delete the selected replay file</value>
   </data>
+  <data name="AircraftFilterControl.Country" xml:space="preserve">
+    <value>COUNTRY</value>
+    <comment>COUNTRY</comment>
+  </data>
+  <data name="AircraftFilterControl.Manufacturer" xml:space="preserve">
+    <value>MANUFACTURER</value>
+    <comment>MANUFACTURER</comment>
+  </data>
+  <data name="AircraftFilterControl.Model" xml:space="preserve">
+    <value>MODEL</value>
+    <comment>MODEL</comment>
+  </data>
+  <data name="AircraftFilterControl.OnlyFreeRented" xml:space="preserve">
+    <value>Only Free/Rented</value>
+    <comment>Only Free/Rented</comment>
+  </data>
+  <data name="AircraftFilterControl.ShowOlderAircraft" xml:space="preserve">
+    <value>Show older aircraft</value>
+    <comment>Show older aircraft</comment>
+  </data>
+  <data name="AircraftFilterControl.SortBy" xml:space="preserve">
+    <value>Sort By</value>
+    <comment>Sort By</comment>
+  </data>
+  <data name="AircraftSelectionControl.AircraftCountPlural" xml:space="preserve">
+    <value>{0} aircraft</value>
+    <comment>{0} aircraft</comment>
+  </data>
+  <data name="AircraftSelectionControl.AircraftCountSingular" xml:space="preserve">
+    <value>{0} aircraft</value>
+    <comment>{0} aircraft</comment>
+  </data>
+  <data name="AircraftSelectionControl.LiveryCountPlural" xml:space="preserve">
+    <value>{0} liveries</value>
+    <comment>{0} liveries</comment>
+  </data>
+  <data name="AircraftSelectionControl.LiveryCountSingular" xml:space="preserve">
+    <value>{0} livery</value>
+    <comment>{0} livery</comment>
+  </data>
+  <data name="AircraftSelectionControl.MiscShort" xml:space="preserve">
+    <value>Misc.</value>
+    <comment>Misc.</comment>
+  </data>
+  <data name="AircraftSelectionFooterControl.Operators" xml:space="preserve">
+    <value>OPERATORS</value>
+    <comment>OPERATORS</comment>
+  </data>
+  <data name="ProPlansControl.FailedToRetrieveSubs" xml:space="preserve">
+    <value>Failed to retrieve any subscription plans</value>
+    <comment>Failed to retrieve any subscription plans</comment>
+  </data>
+  <data name="ProPlansControl.MostPopular" xml:space="preserve">
+    <value>Most Popular</value>
+    <comment>Most Popular</comment>
+  </data>
+  <data name="ProPlansControl.UnauthorizedAccess" xml:space="preserve">
+    <value>Unauthorized access to subscription plans</value>
+    <comment>Unauthorized access to subscription plans</comment>
+  </data>
+  <data name="RentSubControl.ActiveCommunity.Description" xml:space="preserve">
+    <value>DAILY EVENTS AND GROUP FLIGHTS</value>
+    <comment>DAILY EVENTS AND GROUP FLIGHTS</comment>
+  </data>
+  <data name="RentSubControl.ActiveCommunity.Title" xml:space="preserve">
+    <value>ACTIVE COMMUNITY</value>
+    <comment>ACTIVE COMMUNITY</comment>
+  </data>
+  <data name="RentSubControl.ExploreTheWorld.Description" xml:space="preserve">
+    <value>WORLDWIDE HD 15M/PX SATELLITE TERRAIN IMAGERY</value>
+    <comment>WORLDWIDE HD 15M/PX SATELLITE TERRAIN IMAGERY</comment>
+  </data>
+  <data name="RentSubControl.ExploreTheWorld.Title" xml:space="preserve">
+    <value>EXPLORE THE WORLD</value>
+    <comment>EXPLORE THE WORLD</comment>
+  </data>
+  <data name="RentSubControl.Help" xml:space="preserve">
+    <value>Help</value>
+    <comment>Help</comment>
+  </data>
+  <data name="RentSubControl.InstrumentProcedures.Description" xml:space="preserve">
+    <value>REAL-WORLD GLOBAL NAVIGATION DATA</value>
+    <comment>REAL-WORLD GLOBAL NAVIGATION DATA</comment>
+  </data>
+  <data name="RentSubControl.InstrumentProcedures.Title" xml:space="preserve">
+    <value>INSTRUMENT PROCEDURES</value>
+    <comment>INSTRUMENT PROCEDURES</comment>
+  </data>
+  <data name="RentSubControl.MessageAircraftLiverySub" xml:space="preserve">
+    <value>{0} ({1}) requires a subscription to fly</value>
+    <comment>{0} ({1}) requires a subscription to fly</comment>
+  </data>
+  <data name="RentSubControl.MessageAircraftLiverySubRent" xml:space="preserve">
+    <value>{0} ({1}) requires a rental or a subscription to fly</value>
+    <comment>{0} ({1}) requires a rental or a subscription to fly</comment>
+  </data>
+  <data name="RentSubControl.MessageGenericSub" xml:space="preserve">
+    <value>Infinite Flight Pro gives you access to all aircraft, global scenery and multiplayer</value>
+    <comment>Infinite Flight Pro gives you access to all aircraft, global scenery and multiplayer</comment>
+  </data>
+  <data name="RentSubControl.MoreOptions" xml:space="preserve">
+    <value>More Options</value>
+    <comment>More Options</comment>
+  </data>
+  <data name="RentSubControl.MultiplayerWithAtc.Description" xml:space="preserve">
+    <value>FLY WITH THOUSANDS OF OTHER PILOTS &amp; ATC</value>
+    <comment>FLY WITH THOUSANDS OF OTHER PILOTS &amp; ATC</comment>
+  </data>
+  <data name="RentSubControl.MultiplayerWithAtc.Title" xml:space="preserve">
+    <value>MULTIPLAYER WITH ATC</value>
+    <comment>MULTIPLAYER WITH ATC</comment>
+  </data>
+  <data name="RentSubControl.RealisticAtmosphere.Description" xml:space="preserve">
+    <value>CLOUDS, WINDS ALOFT, DAY/NIGHT CYCLE, AND MORE</value>
+    <comment>CLOUDS, WINDS ALOFT, DAY/NIGHT CYCLE, AND MORE</comment>
+  </data>
+  <data name="RentSubControl.RealisticAtmosphere.Title" xml:space="preserve">
+    <value>REALISTIC ATMOSPHERE</value>
+    <comment>REALISTIC ATMOSPHERE</comment>
+  </data>
 </root>
