--- a/Strings/AppResources.fr.resx
+++ b/Strings/AppResources.fr.resx
@@ -3552,4 +3552,32 @@ Voulez-vous le supprimer ?</value>
     <value>ATMOSPHÈRE RÉALISTE</value>
     <comment>REALISTIC ATMOSPHERE</comment>
   </data>
+  <data name="AircraftFilterControl.Commercial" xml:space="preserve">
+    <value>COMMERCIAL</value>
+    <comment>COMMERCIAL</comment>
+  </data>
+  <data name="AircraftFilterControl.EngineType" xml:space="preserve">
+    <value>Type de Moteur</value>
+    <comment>Engine Type</comment>
+  </data>
+  <data name="AircraftFilterControl.Jet" xml:space="preserve">
+    <value>RÉACTEUR</value>
+    <comment>JET</comment>
+  </data>
+  <data name="AircraftFilterControl.Military" xml:space="preserve">
+    <value>MILITAIRE</value>
+    <comment>MILITARY</comment>
+  </data>
+  <data name="AircraftFilterControl.OperatorType" xml:space="preserve">
+    <value>Type d’Opérateur</value>
+    <comment>Operator Type</comment>
+  </data>
+  <data name="AircraftFilterControl.Piston" xml:space="preserve">
+    <value>PISTON</value>
+    <comment>PISTON</comment>
+  </data>
+  <data name="AircraftFilterControl.Turboprop" xml:space="preserve">
+    <value>TURBOPRO</value>
+    <comment>TURBOPROP</comment>
+  </data>
 </root>
